# get_next_line

./: .gitignore  Makefile  README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c  main.c  meson.build  test.txt
include/: get_next_line.h
src/: get_next_line.c  get_next_line_utils.c  main.c
test/: Makefile
test/src/: main.c
tests/: meson.build  simple.c  speed.c
